[package]
name = "ki"
version = "0.1.3"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["interpolation", "scatter", "rbf"]
categories = ["science"]
repository = "https://github.com/yuulive/ki"
readme = "README.md"
description = "An implementation of Radial Basis Function multidimensional interpolation"

[dependencies]
nalgebra = "0.18"
